feat(cpu): add OpenBLAS FFM matmul path with safe fallback